# Mapna-Quera-Hackathon

./: README.md
1/: Untitled1.ipynb  notebook.ipynb  pyproject.toml  submission.csv  test1.py
1/.ipynb_checkpoints/: notebook-checkpoint.ipynb  statistical_analysis_data-checkpoint.csv
2/: Untitled.ipynb  notebook.ipynb  submission.csv
2/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
2/Test/: Pressure_kPa_test.csv  Temperature_C_test.csv  VibAccel_m_s2_test.csv  VibVelocity_mm_s_test.csv
2/Train/: Pressure_kPa_train.csv  VibAccel_m_s2_train.csv  VibVelocity_mm_s_train.csv
3/: notebook.ipynb
3/test/: BearingTemp_C_test.csv  Current_A_test.csv  FlowRate_L_min_test.csv  Humidity_pct_test.csv  OilLevel_cm_test.csv  Power_kW_test.csv  Pressure_kPa_test.csv  Speed_RPM_test.csv  Temperature_C_test.csv  Torque_Nm_test.csv  VibAccel_m_s2_test.csv  VibDisp_mm_test.csv  VibVelocity_mm_s_test.csv  Voltage_V_test.csv  pH_units_test.csv
3/train/: BearingTemp_C_train.csv  Current_A_train.csv  FlowRate_L_min_train.csv  Humidity_pct_train.csv  OilLevel_cm_train.csv  Power_kW_train.csv  Pressure_kPa_train.csv  Speed_RPM_train.csv  Temperature_C_train.csv  Torque_Nm_train.csv  VibAccel_m_s2_train.csv  VibDisp_mm_train.csv  VibVelocity_mm_s_train.csv  Voltage_V_train.csv  pH_units_train.csv
4/Test/: BearingTemp_C_test.csv  FlowRate_L_min_test.csv  Humidity_pct_test.csv  OilLevel_cm_test.csv  Power_kW_test.csv  Pressure_kPa_test.csv  Speed_RPM_test.csv  Temperature_C_test.csv  Torque_Nm_test.csv  VibAccel_m_s2_test.csv  VibDisp_mm_test.csv  (+3 more)
5/: Untitled.ipynb  submission.csv
(+31 files in other folders)
