[project]
name = "1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ebad84",email = "ebad84.025@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
